# gRPC-project-test

./: .gitignore  Makefile  README.md  pyproject.toml
go-project/: Makefile  go.mod  go.sum  local.env  main.go
go-project/cmd/promotion/: main.go
go-project/internal/promotion/: adapters.go  adapters_test.go  promotion.go  promotion.pb.go  promotion_grpc.pb.go
go-project/pkg/config/: config.go
go-project/promotion/: promotion.go  promotion.pb.go  promotion_grpc.pb.go
go-project/protos/: order.pb.go  promotion.pb.go
protos/: order.proto  promotion.proto  promotion.protoset
python-project/: local.env  pyproject.toml
python-project/shopping-api/: manage.py  pytest.ini
python-project/shopping-api/apps/clients/: admin.py  routes.py
python-project/shopping-api/apps/clients/migrations/: 0001_initial.py
python-project/shopping-api/apps/commons/: stubs.py  utils.py
python-project/shopping-api/apps/products/: api.py  serializers.py
python-project/shopping-api/apps/products/migrations/: 0001_initial.py
python-project/shopping-api/apps/protos/: order_pb2.py  promotion_pb2.py
python-project/shopping-api/apps/stubs/: promotion.py  promotion_pb2.py  promotion_pb2_grpc.py
python-project/shopping-api/shopping_api/: settings.py  urls.py
python-project/shopping-api/tests/: conftest.py
python-project/shopping-api/tests/commons/: stubs_test.py  test_stubs.py  test_utils.py
python-project/shopping-api/tests/products/: conftest.py  test_api.py  test_serializers.py
shopping-api/shopping_api/: asgi.py  settings.py  wsgi.py
shopping-api/tests/: conftest.py
(+13 files in other folders)
