[tool.poetry]
name = "shopping-api"
version = "0.1.0"
description = "A API that provides a simple shopping interface"
authors = ["thiagolopes <thiagolopes@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
prettyconf = "^2.1.0"
grpcio = "^1.34.0"
dj-database-url = "^0.5.0"
djangorestframework = "^3.12.2"
grpcio-tools = "^1.34.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
isort = "^5.6.4"
python-language-server = "^0.36.2"
pytest-django = "^4.1.0"
factory-boy = "^3.1.0"
django-extensions = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
known_localfolder = "apps,shopping_api,tests"
